Bug 476858 - Replace new Boolean with Boolean.valueOf
Change-Id: Iec20da9c3e2feda73fd6b7b92eecacdb9ad1728f
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>